--- a/style.css
+++ b/style.css
@@ -1,15 +1,66 @@
+/*-----------NAVBAR-----------*/
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh; 
+    width: 100%;
+}
+
+.logo img{
+    height: 55px;
+    margin: 5px;
+}
+
+.nav-links a{
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 0.2em;
+    border-radius: 10px;
+    background-color: #649097;
+    padding: 5px;
+    color: white;
+    box-shadow: 2px 2px rgb(63, 59, 59, 0.35);
+}
+.nav-links a:hover{
+    color: black;
+}
+.nav-links li{
+    list-style: none; 
+}
+
+.nav-links li:hover{
+    transform: scale
+}
+.nav-links{
+   display: flex;
+    width: 40%;
+    justify-content: space-around;
+}
+/*-----------MAIN CONTENT-----------*/
 #content {
     margin-left: auto;
     margin-right: auto;
     width: 650px;
   }
 body,button {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
-div#log-in {
-    background-color: lightseagreen;
+div#log-in,div#new-user {
+    background-color:#f1f3e9;
 }
-div#new-user {
-    margin-top: 10px;
-    background-color: bisque;
+h2 {
+    background-color: #dfdbc2;
+    font-family: 'Poppins', sans-serif;
+}
+.blocktext {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3em;
+    width: 7em;
+}
+h1 {
+    font-size: 70px;
+    font-family: 'Poppins', sans-serif;
 }
